--- a/test/loader/CMakeLists.txt
+++ b/test/loader/CMakeLists.txt
@@ -38,7 +38,13 @@ target_link_libraries(wasmedgeLoaderASTTests
 )
 
 wasmedge_add_executable(wasmedgeLoaderSerializerTests
+  serializeModuleTest.cpp
   serializeSectionTest.cpp
+  serializeDescriptionTest.cpp
+  serializeSegmentTest.cpp
+  serializeTypeTest.cpp
+  serializeExpressionTest.cpp
+  serializeInstructionTest.cpp
 )
 
 add_test(wasmedgeLoaderSerializerTests wasmedgeLoaderSerializerTests)
